--- a/Templates/home.html
+++ b/Templates/home.html
@@ -4,11 +4,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <title>EasyOP</title>
+        <style>
+            #banner {
+                width: 850;
+                padding-top: 15px;
+            }
+        </style>
     </head>
     <body>
+        {% include 'header.html' %}
     <div class = 'ms-5'>
         <h1>{{companyName}}</h1>
-        <img class="img-fluid" src="https://th.bing.com/th/id/OIP.dOrjtVMUFW0bGOgsaJVWawHaCU?rs=1&pid=ImgDetMain">
+        <img class="img-fluid" id="banner" src="https://th.bing.com/th/id/OIP.dOrjtVMUFW0bGOgsaJVWawHaCU?rs=1&pid=ImgDetMain">
 
     <h2 class = 'mt-4'>About EasyOP</h2>
     
@@ -22,11 +29,10 @@
         {% endfor %}
         </div>
     </p>
-    <div>
+    <div style="display: flex; justify-content: center;">
         <button class ='btn btn-primary'>Add Inventory</button>
     </div>
-
-    <p class = 'mt-3'>Copyright 2023, EasyOP</p>
     </div>
+    {% include 'footer.html' %}
     </body>
 </html>
