--- a/Templates/inventoryitem.html
+++ b/Templates/inventoryitem.html
@@ -1,6 +1,6 @@
 <div class="border-bottom ms-2 row" style="margin-bottom: 4px;">
     <div class="col-9">
-    <h4 style="color: rgb(120,120,120);margin-bottom: 4px;">{{inventory['Item']}}
+    <h4 style="color: rgb(120,120,120);margin-bottom: 4px;">{{inventory['Company']}} - {{inventory['Model']}}
     </h4>
 {% if 'Color' in inventory %}
 <div>
