--- a/templates/inventoryitem.html
+++ b/templates/inventoryitem.html
@@ -12,6 +12,6 @@
 </div>
 </div>
 <div class = "col-3">
-<button type="button" class="btn btn-outline-primary mt-4">Show Details</button>
+    <a href="/inventory/{{inventory['Id']}}" class="btn btn-outline-primary mt-4">Show Details</a>
 </div>
 </div>
