--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
 
       <div class="dropdown text-end">
         <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="/Designer (1).jpeg" alt="mdo" width="32" height="32" class="rounded-circle">
+          <img src="../static/Logo.jpeg" alt="mdo" width="32" height="32" class="rounded-circle">
         </a>
         <ul class="dropdown-menu text-small">
           <li><a class="dropdown-item" href="#">New project...</a></li>
