--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         {% include 'header.html' %}
-    <div class = 'ms-5'>
+    <div class = 'ms-5 mt-3'>
         <h1>{{companyName}}</h1>
         <img class="img-fluid" id="banner" src="https://th.bing.com/th/id/OIP.dOrjtVMUFW0bGOgsaJVWawHaCU?rs=1&pid=ImgDetMain">
 
