--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,8 @@
         </div>
     </p>
     <div style="display: flex; justify-content: center;">
-        <button class ='btn btn-primary'>Add Inventory</button>
+        <!-- <button class ='btn btn-primary'>Add Inventory</button> -->
+        <a href="/AddInventory" class="btn btn-primary">Add Inventory</a>
     </div>
     </div>
     {% include 'footer.html' %}
