--- a/templates/AddInventory.html
+++ b/templates/AddInventory.html
@@ -16,12 +16,12 @@
         <form action="/AddInventory/Submitions" method="post">
             <div class="mt-3">
                 <label class="form-label">Company</label>
-                <input class="form-control" type="text" name="Company" placeholder="Samsung">
+                <input class="form-control" type="text" required name="Company" placeholder="Samsung">
             </div>
 
             <div class="mt-3">
                 <label class="form-label">Model</label>
-                <input class="form-control" type="text" name="Model" placeholder="S22 Ultra">
+                <input class="form-control" type="text" required name="Model" placeholder="S22 Ultra">
             </div>
 
             <div class="mt-3">
@@ -31,12 +31,12 @@
 
             <div class="mt-3">
                 <label class="form-label">Price</label>
-                <input class="form-control" type="text" name="Price" placeholder="123000">
+                <input class="form-control" type="number" required name="Price" placeholder="123000">
             </div>
         
             <div class="mt-3">
                 <label class="form-label">Quantity</label>
-                <input class="form-control" type="text" name="Quantity" placeholder="10">
+                <input class="form-control" type="number" required name="Quantity" placeholder="10">
             </div>
 
             <div class="mt-3">
