Added Inventry from home page to inventory section

--- a/templates/ShowInventory.html
+++ b/templates/ShowInventory.html
@@ -12,14 +12,7 @@
     <body>
         {% include 'header.html' %}
     <div class = 'ms-5 mt-3'>
-        <h1>{{companyName}}</h1>
-        <img class="img-fluid" id="banner" src="https://th.bing.com/th/id/OIP.dOrjtVMUFW0bGOgsaJVWawHaCU?rs=1&pid=ImgDetMain">
-
-    <h2 class = 'mt-4'>About EasyOP</h2>
-    
-    <p class = 'lead mb-4'>This business makes business more organised with tech enable solution for inventory and billing management. We will help shop owners to keep real time track of their inventory, manpower and money which will make life of business owner very easy.</p>
-
-    <!-- <h2>Inventory</h2>
+        <h1>Inventory</h1>
     <p class = 'lead'>
         <div>
         {% for inventory in inventory %}
@@ -29,8 +22,7 @@
     </p>
     <div style="display: flex; justify-content: center;">
         <a href="/AddInventory" class="btn btn-primary">Add Inventory</a>
-    </div> -->
-    
+    </div>
     </div>
     {% include 'footer.html' %}
     </body>
